# Web_Development_Course_Design

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
backend/: auth.rs  health.rs  main.rs  middleware.rs  scheduler.rs  state.rs
backend/api/: log.rs  lp.rs  lucky_draw.rs  mod.rs  permission.rs  role.rs  shop.rs  user.rs
src/: lib.rs  main.rs
src/api/: mod.rs
src/components/: app_state.rs  mod.rs
src/db/: log_service.rs  lp_service.rs  lucky_draw_service.rs  mod.rs  permission_service.rs  role_service.rs  shop_service.rs  user_service.rs
src/models/: mod.rs
src/pages/: login.rs  logs.rs  lp_management.rs  lp_submit.rs  lucky_draw.rs  mod.rs  my_shop.rs  permissions.rs  profile.rs  register.rs  roles.rs  shop.rs  shop_transactions.rs  users.rs
