[package]
name = "team-operation-system"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "frontend"
path = "src/main.rs"
required-features = ["frontend"]

[[bin]]
name = "backend"
path = "backend/main.rs"
required-features = ["backend"]

[dependencies]
dioxus = { version = "0.7.1", features = ["web", "router"] }
dioxus-logger = "0.7.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = { version = "0.17", optional = true }
uuid = { version = "1.18", features = ["v4", "serde", "js"] }
tokio = { version = "1", features = ["full"], optional = true }
once_cell = "1.21"
log = "0.4"
gloo-net = { version = "0.6", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-sys = { version = "0.3", features = ["Window", "Storage"], optional = true }

# Backend dependencies
axum = { version = "0.8", features = ["macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"], optional = true }
env_logger = { version = "0.11", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true }
rand = { version = "0.8", optional = true }

[features]
default = ["frontend"]
frontend = ["gloo-net", "gloo-timers", "web-sys"]
backend = ["axum", "tower", "tower-http", "jsonwebtoken", "env_logger", "sqlx", "bcrypt", "tokio", "tracing", "tracing-subscriber", "metrics", "metrics-exporter-prometheus", "rand"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
